--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "crypto": "^1.0.1",
     "fluent-ffmpeg": "^2.1.2",
     "imagemin-webp": "^7.0.0",
-    "os": "^0.1.2",
-    "path": "^0.12.7",
     "qrcode-terminal": "^0.12.0",
-    "streamifier": "^0.1.1"
+    "sharp": "^0.29.3",
+    "streamifier": "^0.1.1",
+    "wa-sticker-formatter": "^4.2.0"
   }
 }
