--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "axios": "^0.25.0",
     "fluent-ffmpeg": "^2.1.2",
     "qrcode-terminal": "^0.12.0",
-    "streamifier": "^0.1.1",
-    "wa-sticker-formatter": "^4.2.0"
+    "streamifier": "^0.1.1"
   }
 }
