--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@adiwajshing/baileys": "^3.5.3",
     "axios": "^0.25.0",
     "fluent-ffmpeg": "^2.1.2",
+    "i": "^0.3.7",
+    "npm": "^8.4.0",
     "qrcode-terminal": "^0.12.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "wa-sticker-formatter": "^4.0.3",
+    "wa-sticker-tew": "^2.3.6",
+    "webp-converter": "^2.3.3"
   }
 }
