--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.3",
     "node-banner": "^1.4.0",
+    "pensador-promise": "^0.3.0",
     "qrcode-terminal": "^0.12.0",
     "sequelize": "^6.15.0",
     "streamifier": "^0.1.1",
