--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-banner": "^1.4.0",
     "pensador-promise": "^0.3.0",
     "qrcode-terminal": "^0.12.0",
+    "random-seed": "^0.3.0",
     "sequelize": "^6.15.0",
     "streamifier": "^0.1.1",
     "terminal-banner": "^1.1.0"
